dataset1235/2025-2/2868285114/users/2884723940/executions/3649835072_1462915504.log
== SUBMISSION (2025-08-19 23:10:15)
-- CODE: 
import math

# faça seu código aqui!
lado = float(input())

apotema = lado/(2*math.tan(math.pi/5))
area = (5/2) * lado * apotema

print(round(are,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(are,2))
                ^^^
NameError: name 'are' is not defined. Did you mean: 'area'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(are,2))
                ^^^
NameError: name 'are' is not defined. Did you mean: 'area'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(are,2))
                ^^^
NameError: name 'are' is not defined. Did you mean: 'area'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(are,2))
                ^^^
NameError: name 'are' is not defined. Did you mean: 'area'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(are,2))
                ^^^
NameError: name 'are' is not defined. Did you mean: 'area'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(are,2))
                ^^^
NameError: name 'are' is not defined. Did you mean: 'area'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:10:20)
-- CODE: 
import math

# faça seu código aqui!
lado = float(input())

apotema = lado/(2*math.tan(math.pi/5))
area = (5/2) * lado * apotema

print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
